[gd_scene load_steps=3 format=3 uid="uid://bt253jttytro1"]

[ext_resource type="Script" path="res://candle.gd" id="1_76g8m"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rapgo"]
a = Vector2(-2, -50)
b = Vector2(2, 50)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_76g8m")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="KlinesRequest" type="HTTPRequest" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_rapgo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="request_completed" from="KlinesRequest" to="." method="_on_http_request_2_request_completed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
